[gd_scene load_steps=6 format=3 uid="uid://v6iid1dylmk0"]

[ext_resource type="Script" uid="uid://b3s3njb8sryui" path="res://scripts/asteroid.gd" id="1_a2bka"]
[ext_resource type="Texture2D" uid="uid://bjoeiryjcue3v" path="res://Assets/asteroid.png" id="2_bi0dy"]
[ext_resource type="AudioStream" uid="uid://lelvjv28k4o4" path="res://Assets/sounds/pop-402323.mp3" id="3_rvlwq"]
[ext_resource type="PackedScene" uid="uid://bkjwjxhseq41m" path="res://Scenes/particles/asteroid_hit_particle.tscn" id="4_bi0dy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rvlwq"]
radius = 74.858536

[node name="Asteroid" type="CharacterBody2D"]
position = Vector2(-1.9073486e-06, 3.8146973e-06)
scale = Vector2(0.88500035, 0.88500035)
collision_layer = 3
collision_mask = 2
script = ExtResource("1_a2bka")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.9073485e-06, -4.291534e-06)
scale = Vector2(0.93694633, 0.93694633)
shape = SubResource("CircleShape2D_rvlwq")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2.1551955e-06, -4.3103905e-06)
scale = Vector2(0.38348654, 0.38348654)
texture = ExtResource("2_bi0dy")

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="GetDamageSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_rvlwq")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1.9073486e-06, -4.2915344e-06)
shape = SubResource("CircleShape2D_rvlwq")
debug_color = Color(0.7274982, 0.43591833, 0.51372665, 0.41960785)

[node name="AsteroidHitParticle" parent="." instance=ExtResource("4_bi0dy")]
unique_name_in_owner = true
position = Vector2(-1, -2)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
